# ifsc

./: .editorconfig  .gitignore  .npmignore  .rubocop.yml  .semgrepignore  CHANGELOG.md  CONTRIBUTING.md  DOCUMENTATION.md  Gemfile  IFSC.php.erb  LICENSE  Makefile  README.md  Rakefile  bootstrap.sh  composer.json  generate.rb  go.mod  go.sum  ifsc.gemspec  methods.rb  mix.exs  package-lock.json  package.json  parse_list.rb  phpunit.xml  pyproject.toml  setup.py  take-it-live.yaml  tsconfig.json  wercker.yml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: NPM_Publish.yml  Ruby_Gem_Publish.yml  create-ifsc-pr.yml  publish.yml  release.yml  scraper.yml  security.yml  tests.yml
scraper/: Gemfile
scraper/scripts/: bootstrap.sh  code-coverage.sh  convert_excel.py  districts.json  districts.rb  export_later.rb  generate.rb  iso3166.rb  methods.rb  methods_nach.rb  nach.html  nach.json  parse_nach.rb  release.sh  releasenotes.php  run_checks.sh  test_bank_names.rb  upi.html  utils.rb
scripts/: bootstrap.sh  build-regex.js  check-json-for-parsing-errors.rb  export_later.rb  generate.rb  ifsc.rb  methods.rb  parse_list.rb
scripts/templates/: Bank.erb  IFSC.php.erb  IFSC.rb.erb
src/: IFSC.json  banknames.json  banks.json  custom-sublets.json  go.mod  sublet.json
src/elixir/: README.md  mix.exs
src/go/: Bank.go  Client.go  IFSC.go  Makefile  bank.go  bank_test.go  client.go  client_test.go  errors.go  (+5 more)
tests/: BankNameTest.php  ClientTest.php  CoverageTest.php  SubletTest.php  ValidatorTest.php  constants.sh  validator_asserts.json
(+131 files in other folders)
