[project]
name = "py-ifsc"
version = "0.0.1"
authors = [
  { name="sreevardhanreddi", email="sreevardhanreddi@gmail.com" },
]
description = "This is part of the IFSC toolset released by Razorpay. You can find more details about the entire release at [ifsc.razorpay.com](https://ifsc.razorpay.com)."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests",
]


[project.urls]
"Homepage" = "https://github.com/razorpay/ifsc"
"Bug Tracker" = "https://github.com/razorpay/ifsc/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
